FEAT[08]: CREATE SWITH CODE
- Implement  tests with mocha
- Separate inviroments
- Prepare to run server and test separa..
