# src/swagger.yaml
@@ -19,7 +19,7 @@ paths:
       description: "This route have the responsability do insert new PDV"
       requestBody:
           content: 
-            aplication/json:
+            text/plain:
               schema: 
                 $ref: "#/components/schemas/partnerRequest"
       responses:
@@ -70,7 +70,6 @@ paths:
                     type: string                
                   $ref: "#/components/schemas/partnerResultFail"  
 
-
   /pdv/closer: 
     post:
       summary: "Find PDV closer"
@@ -78,7 +77,7 @@ paths:
       description: "This route have the responsability do find the PDV closer of a coord"
       requestBody:
           content: 
-            aplication/json:
+            text/plain:
               schema: 
                 $ref: "#/components/schemas/targetRequest"
       responses:
@@ -98,28 +97,10 @@ paths:
                   message:
                     type: string                
                   $ref: "#/components/schemas/partnerResultFail" 
-  /pdv/fill: 
-    post:
-      summary: "Fill database with PDVS"
-      tags: ['PDV']
-      description: "This route have the responsability do fill database with PDVS examples"
-      responses:
-        "200":
-          description: "Processo Iniciado!" 
-          content: 
-            aplication/json:
-              schema: 
-                   $ref: "#/components/schemas/simpleMessage"
-        "500":
-          description: "Partner Recovered Fail!" 
-          content: 
-            aplication/json:
-              schema: 
-                  $ref: "#/components/schemas/simpleMessage"                                                   
+                                        
 
 
-
-                
+            
 components:
   schemas:
     simpleMessage:
